--- a/.github/workflows/deploy-website.yaml
+++ b/.github/workflows/deploy-website.yaml
@@ -36,7 +36,7 @@ jobs:
               run: npm run build
             - name: Publish Js filename
               id: som-publish
-              run: find dist/assets/*.js -type f -exedir echo 'som-file-name={}' >> $GITHUB_OUTPUT';'
+              run: find dist/assets/*.js -type f -execdir echo 'som-file-name={}' >> $GITHUB_OUTPUT';'
             - name: Upload Artifacts
               uses: actions/upload-artifact@v4
               with:
